[gd_scene load_steps=8 format=2]

[ext_resource path="res://ProfessionPage/ProfessionTrait.gd" type="Script" id=1]
[ext_resource path="res://Gruppo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI_Elements/Buttons/skil selected.png" type="Texture" id=4]
[ext_resource path="res://UI_Elements/Buttons/skill inactive.png" type="Texture" id=5]
[ext_resource path="res://UI_Elements/Buttons/skill ready.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="ProfesionTraitButton" type="TextureButton"]
margin_right = 220.0
margin_bottom = 200.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
script = ExtResource( 1 )
trait_name_label = NodePath("MarginContainer/VBoxContainer/TraitNameLabel")
trait_description_label = NodePath("MarginContainer/VBoxContainer/TraitDescriptionLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TraitNameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 44.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Trait 1[/center]"
text = "Trait 1"

[node name="TraitDescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 180.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Trait Description"
text = "Trait Description"

[connection signal="pressed" from="." to="." method="_on_ProfesionTraitButton_pressed"]
